# hive

./: .gitignore  .gitmodules  README.md
hive-hook/: .env.example  pyproject.toml  test.py  test_hive_mind.py
hive-hook/src/hive_hook/: __init__.py  buffer.py  config.py  data.py  decorator.py  outbound.py  server.py
hive-mind/: go.mod  hive.db
hive-mind/cmd/orchestrator/: hive.db  main.go
hive-mind/internal/api/: middleware.go
hive-mind/internal/domain/: types.go
hive-mind/internal/podmanager/: interface.go  manifest.go  noop.go
hive-mock-pipeline/: application-agent.py  credit-agent.py  identity-agent.py  pyproject.toml  requirements.txt  risk-agent.py  streamlit-agent.py
hive-orchestrator/: Dockerfile.sidecar  go.sum  hive.yaml
hive-orchestrator/cmd/orchestrator/: main.go
hive-orchestrator/internal/api/: handlers.go  server.go
hive-orchestrator/internal/builder/: builder.go
hive-orchestrator/internal/config/: config.go
hive-orchestrator/internal/dashboard/: dashboard.go
hive-orchestrator/internal/domain/: types.go
hive-orchestrator/internal/github/: puller.go
hive-orchestrator/internal/orchestrator/: orchestrator.go
hive-orchestrator/scripts/: dev-cluster.sh
hive-panopticon/: build.zig.zon
hive-panopticon/src/: main.zig
hive-pollinate/: dockerfile  main.py  proxy.py  pyproject.toml  setup.py  setup.sh
hive_panopticon/: build.zig  build.zig.zon
hive_panopticon/src/: main.zig
hive_pollinate/: pyproject.toml
ssh_deployer/tmp/: setup.sh
telemetry_microservice/: build.zig  build.zig.zon
telemetry_microservice/src/: main.zig
(+19 files in other folders)
